--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -43,11 +43,12 @@ main {
 }
 
 .content {
+    height: calc(100vh - 250px);
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
-    gap: 10vh;
+    gap: 30px;
 }
 
 i {
@@ -58,11 +59,11 @@ i.win {
     color: $win-color;
 }
 
-.modal-open {
+.open {
     display: block;
 }
 
-.modal-close {
+.close {
     display: none;
 }
 
@@ -70,23 +71,15 @@ i.win {
     color: $dark-color;
     font-size: 32px;
     text-align: center;
-    background: $transparent-color;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
 
     &-window {
         padding: 50px;
-        position: fixed;
-        top: 70%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        height: 260px;
+        width: 380px;
         margin: 0;
         z-index: 999;
         border-radius: 20px;
-        box-shadow: 0 0 200px 50px $dark-color;
+        box-shadow: 0 0 40px 50px $dark-color;
         background: $main-color;
         display: flex;
         flex-direction: column;
@@ -96,12 +89,14 @@ i.win {
     }
 
     &-btns {
+        display: flex;
+        justify-content: space-between;
         gap: 20px;
     }
 
     &-btn {
         all: unset;
-        padding: 30px;
+        padding: 20px;
         font-size: 24px;
         cursor: pointer;
         transition: all 0.5s ease;
@@ -114,8 +109,6 @@ i.win {
             color: $dark-color;
         }
     }
-
-
 }
 
 .board {
@@ -143,8 +136,9 @@ i.win {
 }
 
 
-#scoreboard {
+.score {
     margin: 20px auto;
+    height: 200px;
 }
 
 footer {
